package products;

/**
 * Caloric interface
 */
public interface Caloric {
    int getCalories();
}
